fix: disable horizontal scroll banding on ios and android

--- a/app/_theme/globals.scss
+++ b/app/_theme/globals.scss
@@ -83,6 +83,7 @@ body {
   font-family: var(--font-exo);
   background-color: rgb(var(--brand-background));
   color: rgb(var(--brand-foreground));
+  overflow-x: hidden;
 }
 
 button,
